--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
-twitter-bot-go-markov-chain
+bin/
+training/
